located in I<pathdb> when B<pullnews> is run as the news user, or
otherwise in the running user's home directory.  It was previously
stored in F<.pullnews> in the running user's home directory (even for
the news user).

=item *

Building with Libtool is no longer optional.  The B<--enable-libtool>
option to B<configure> has been removed.

=item *

For security reasons, use of the flawed SSLv2 protocol is now disabled
for TLS sessions with B<nnrpd>.

=back

=head1 Changes in 2.5.4

=over 2

=item *

As the name of the F<radius.conf> configuration file shipped with INN
for the B<nnrpd> authenticator against a RADIUS server conflicts with
the libradius package, this file is renamed to F<inn-radius.conf>
(B<innupgrade> takes care of the rename during the update).

=item *

The attributes hash is now accessible to B<nnrpd> Perl posting filter.
As a result, F<filter_nnrpd.pl> can make use of it.  Only authentication
and access Perl hooks could previously use the attributes hash.
Thanks to Steve Crook for this addition.

=item *

INN now properly builds fine with S<< B<flex> 2.5.36 >> (this version
introduced a change of type for a variable used by INN).

=item *

When using funnel feeds, B<innfeed> log files were open forever, which
resulted in empty log files, once rotated by B<scanlogs>.  B<innfeed>
now reopens its log files upon receiving a HUP signal; this signal
is in particular sent by B<scanlogs> during log rotation.  Thanks to
Florian Schlichting for the patch.

=item *

Exploder and process channels are now reopened when C<ctlinnd flushlogs>
is used.  Otherwise, they could hold open an already deleted F<errlog>
file.  The issue affected in particular B<controlchan> or B<ninpaths>,
running as such channels.

=item *

Fixed a buffer overflow when using B<imapfeed> with more than a million
commands during the same IMAP session.  Thanks to David Binderman for
the bug report.

=item *

Fixed a regression that occurred in S<INN 2.5.3> regarding the path used