@@ -41,6 +41,8 @@ m4_include([m4/inet-ntoa.m4])
 m4_include([m4/iov-max.m4])
 m4_include([m4/krb5.m4])
 m4_include([m4/large-fpos.m4])
+m4_include([m4/lib-depends.m4])
+m4_include([m4/lib-pathname.m4])
 m4_include([m4/libtool.m4])
 m4_include([m4/lt~obsolete.m4])
 m4_include([m4/ltoptions.m4])
